src/app/pages/contacts/components/contacts-list/contacts-list.scss
@use '../../../../../styles/abstracts/mixins' as *;
@use '../../../../../styles/abstracts/variables' as *;

.contacts-sidebar {
  width: 424px;
  height: 100%;
  background-color: var(--bg-ultralight);
  border-right: 1px solid var(--border-clr-light);
  box-shadow: var(--shadow-right);
  @include flexbox(column, flex-start, flex-start, 0);
  box-sizing: border-box;

  scrollbar-width: thin;
  scrollbar-color: var(--border-clr-light) transparent;
  overflow-y: auto;

  @include respond-to(xl) {
    width: 320px;
  }

  @include respond-to(lg) {
    width: 100%;
    max-width: 100vw;
    border-right: none;
    box-shadow: none;
  }

  @media (max-width: 610px) {
    width: 100%;
    max-width: 100vw;
    display: flex;
    flex-direction: column;

    height: 100%;
    border-right: none;
    box-shadow: none;

    overflow: hidden;
  }

  &::-webkit-scrollbar {
    width: 24px;
  }

  &::-webkit-scrollbar:horizontal {
    height: 0px;
  }

  &::-webkit-scrollbar-track {
    background: transparent;
  }

  &::-webkit-scrollbar-thumb {
    background-color: var(--border-clr-light);
    background-clip: padding-box;
    border: 8px solid transparent;
    border-radius: 11px;
    min-height: 53px;

    &:hover {
      background-color: var(--text-color-light);
    }
  }

  &::-webkit-scrollbar-button {
    display: block;
    height: 40px;
    width: 24px;
    background-color: transparent;
    background-repeat: no-repeat;
    background-size: 8px 5px;
    opacity: 1;

    &:vertical:single-button:decrement {
      background-image: url("data:image/svg+xml,%3Csvg%20width='8'%20height='5'%20viewBox='0%200%208%205'%20fill='none'%20xmlns='http://w3.org");
      background-position: center;
    }

    &:vertical:single-button:increment {
      background-image: url("data:image/svg+xml,%3Csvg%20width='8'%20height='5'%20viewBox='0%200%208%205'%20fill='none'%20xmlns='http://w3.org");
      background-position: center;
    }

    @include respond-to(sm) {
      display: none;
    }
  }

  &__action-area {
    padding: var(--space-xl) var(--space-lg) var(--space-md) var(--space-lg);
    display: flex;
    @include flexbox(row, center, center, 0);
    width: 100%;
    box-sizing: border-box;
    position: sticky;
    top: 0;
    z-index: 10;
    background-color: var(--bg-ultralight);

    @include respond-to(lg) {
      padding-inline: var(--space-md);
    }

    app-button {
      width: 100%;

      @include respond-to(lg) {
        display: none;
      }
    }
  }

  &__btn-mobile {
    @include flexbox(row, center, center, 0);
    border: none;
    cursor: pointer;
    box-sizing: border-box;
    width: 56px;
    height: 56px;
    border-radius: var(--radius-pill);
    background-color: var(--bg-muted);
    color: var(--text-color-ultralight);
    box-shadow: var(--shadow-allaround);

    position: fixed;
    bottom: 100px;
    right: var(--space-lg);
    z-index: 999;

    display: none;

    @include respond-to(lg) {
      display: flex;
    }
  }

  &__scroll-area {
    flex: 1;
    width: 100%;
    padding-top: var(--space-md);
    padding-bottom: var(--space-xl);
    padding-left: var(--space-lg);
    padding-right: var(--space-sm);
    box-sizing: border-box;

    @include respond-to(lg) {
      padding-left: var(--space-md);
      padding-right: var(--space-md);
      width: 100%;
    }

    @media (max-width: 610px) {
      overflow-y: auto;
      padding-bottom: 120px;
    }
  }

  &__alphabet-section {
    @include flexbox(column, flex-start, stretch, var(--space-sm));
    width: 100%;
    margin-bottom: var(--space-md);
  }

  &__alphabet-header {
    @include flexbox(column, flex-start, stretch, 0);
    width: 100%;
  }

  &__cards-list {
    @include flexbox(column, flex-start, stretch, var(--space-sm));
    width: 100%;
  }

  &__letter-badge {
    font-family: var(--ff-display);
    font-size: var(--fs-h4);
    font-weight: var(--fw-regular);
    line-height: var(--lh-heading);
    color: var(--text-color-dark);
    padding-left: var(--space-md);
    width: 100%;
    box-sizing: border-box;
    display: block;
  }

  &__separator {
    width: 100%;
    height: 1px;
    background-color: var(--border-clr-light);
    border: none;
    margin-block: var(--space-xs);
  }

  &__card {
    @include flexbox(row, flex-start, center, var(--space-md));
    padding: var(--space-md);
    border-radius: var(--radius-lg);
    background-color: var(--bg-ultralight);
    cursor: pointer;
    width: 100%;
    box-sizing: border-box;
    transition: background-color 0.1s ease-in-out;

    &:hover {
      background-color: var(--bg-light);
      .contacts-sidebar__name {
        color: var(--text-color-dark);
      }
    }

    &--active {
      background-color: var(--bg-dark);

      .contacts-sidebar__name {
        color: var(--text-color-ultralight);
      }
      .contacts-sidebar__email {
        color: #007cee;
      }
    }
  }

  &__avatar {
    @include flexbox(row, center, center, 0);
    width: 42px;
    height: 42px;
    border-radius: var(--radius-pill);
    border: 2px solid var(--bg-ultralight);
    color: var(--text-color-ultralight);
    font-weight: var(--fw-semibold);
    font-size: var(--fs-h5);
    box-sizing: border-box;
    flex-shrink: 0;
  }

  &__info {
    @include flexbox(column, flex-start, flex-start, var(--space-xs));
    flex: 1;
    overflow: hidden;
  }

  &__name {
    font-size: var(--fs-body-large);
    font-weight: var(--fw-regular);
    color: var(--text-color-dark);
  }

  &__email {
    font-family: var(--ff-body);
    font-size: var(--fs-body-normal);
    font-weight: var(--fw-regular);
    line-height: var(--lh-heading);
    color: var(--text-color-special);
    text-overflow: ellipsis;
    white-space: nowrap;
    overflow: hidden;
    width: 100%;
  }
}

app-contact-add-new-contact-dialog {
  position: absolute;
  top: calc((100% - 600px) / 2);
  left: calc(((100% - 1200px) / 2));
}

